# libzseek

./: .editorconfig  Doxyfile.in  LICENSE  Makefile  Makefile.am  README.md  archive.h  compress.c  configure.ac  decompress.c  libzseek.pc.in  meson.build  seek_table.c  seek_table.h
src/: buffer.c  buffer.h  buffer_pool.c  buffer_pool.h  cache.c  cache.h  common.c  common.h  compress.c  decompress.c  seek_table.c  seek_table.h  zseek.h
test/: .gitignore  Makefile  benchmark.c  benchmark.sh  example.c  report.awk  results1m.txt  results256m.txt  results4k.txt  results64m.txt  test.c  test_buffer.c  test_buffer_pool.c  test_cache.c
test/results/: report1m.txt  report256m.txt  report4k.txt  report64m.txt  results1m.txt  results256m.txt  results4k.txt  results64m.txt
